# new_server

./: .gitignore
ServerConsole/: .cproject  .project
ServerConsole/src/: ServerConsole.hpp
asio_test_client/: .cproject  .project  client.cpp
asio_test_server/: .cproject  .project  server.cpp
baselib/: .cproject  .project  Makefile.am  atomic.hpp  auto_size_with_recycle_container.h  basedef.h  basefunction.h  baselib.h  config.h  configure.ac  constvar.h  interface.h  internal_event_pump.h  struct.h  thread_base.h  tinyxml.h
baselib/src/: basefunction.cpp  internal_event_pump.cpp  thread_base.cpp
datasource/: .cproject  .project  datasource.h  mysqldatasource.h
datasource/src/: mysqldatasource.cpp
hello_world/: .cproject
hello_world/src/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello_world  hello_world.cpp
hello_world/src/.deps/: hello_world.Po
network/: .cproject  .project  defaultnetmsgprotocal.h  network_define.h  network_interface.h  networkservice.h  socketitem.h
network/src/: defaultnetmsgprotocal.cpp  networkservice.cpp  socketitem.cpp
service/: .cproject  .project  consoleservice.h  idictionarymanager.h  netmsg.h  segmentbufferholder.h  service.h  service_define.h  service_thread.h  servicemanager.h  servicerelated.h
service/src/: consoleservice.cpp  idictionarymanager.cpp  segmentbufferholder.cpp  service.cpp  servicemanager.cpp  (+1 more)
test_database/: .cproject  .project
test_tcp_server/: .cproject  .project  tcp_server.cpp
test_udp_server/: .cproject  .project  udp_server.cpp
(+3 files in other folders)
