lib_LIBRARIES=libbaselib.a
libbaselib_a_SOURCES= /source/basefunction.cpp \
	/source/internal_event_pump.cpp /source/thread_base.cpp \
	/source/tinystr.cpp /source/tinyxml.cpp /source/tinyxmlerror.cpp \
	/source/tinyxmlparser.cpp \
	atomic.hpp auto_size_with_recycle_container.h \
	basedef.h basefunction.h constvar.h interface.h \
	internal_event_pump.h struct.h thread_base.h tinystr.h \
	tinyxml.h
	